<resources>
    <string name="app_name_full">BTS Wallet</string>
    <string name="app_name">FINTEHWALLET</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up_button">SignUpButtonActivity</string>
    <string name="sign_up_button">LOG IN</string>
    <string name="dummy_content">FINTEHWALLET</string>
    <string name="splash_page_message">Possess your wealth</string>
    <string name="about_activity_title">About</string>
    <string name="settings_activity_title">Settings</string>
    <string name="import_activity_title">Import key</string>
    <string name="model_select_activity_title">Log In</string>
    <string name="operation_history_year">%d year ago</string>
    <string name="operation_history_years">%d years ago</string>
    <string name="operation_history_month">%d month ago</string>
    <string name="operation_history_months">%d months ago</string>
    <string name="operation_history_weeks">%d weeks ago</string>
    <string name="operation_history_week">%d week ago</string>
    <string name="operation_history_day">%d day ago</string>
    <string name="operation_history_days">%d days ago</string>
    <string name="operation_history_hours">%d hours ago</string>
    <string name="operation_history_hour">%d hour ago</string>
    <string name="operation_history_minte">%d minute ago</string>
    <string name="operation_history_mintes">%d minutes ago</string>
    <string name="operation_history_seconds">%d seconds ago</string>
    <string name="operation_history_second">%d second ago</string>
    <string name="main_activity_loading">Loading…</string>
    <string name="import_activity_unknown_error">Some error occurred.</string>
    <string name="import_activity_private_key_invalid">Invalid private key.</string>
    <string name="import_activity_account_invalid">The account does not exist.</string>
    <string name="import_activity_account_not_match_key">The account and the private key do not match.</string>
    <string name="import_activity_account_name_invalid">The account name cannot be found.</string>
    <string name="import_activity_connect_failed">Failed to connect to server.</string>
    <string name="import_activity_file_failed">Cannot read content from the file.</string>
    <string name="import_activity_password_invalid">Invalid password.</string>
    <string name="import_activity_file_bin_password_invalid">Invalid wallet file or password.</string>
    <string name="password_confirm_title">Please type your password:</string>
    <string name="password_confirm_button_confirm">CONFIRM</string>
    <string name="password_confirm_button_cancel">CANCEL</string>
    <string name="password_invalid">Invalid password.</string>
    <string name="connect_fail_message">Failed to connect to the internet. \nPlease retry after you have turned on WIFI or cellular.</string>
    <string name="connect_fail_dialog_retry">Retry</string>
    <string name="log_out_dialog_message">Are you sure you want to log out?</string>
    <string name="log_out_dialog_confirm_button">LOG OUT</string>
    <string name="log_out_dialog_cancel_button">CANCEL</string>
    <string name="import_activity_wallet_model">Wallet Model</string>
    <string name="import_activity_account_model">Account Model</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_activity_text">for support our app buy FINTEH tokens or we appreciate it for getting donation from you.</string>
    <string name="about_activity_version">Version</string>
    <string name="about_activity_button">DONATE</string>
    <string name="send_account_to_hint">Type the account name</string>
    <string name="send_memo_hint">Optional</string>
    <string name="transaction_memo_hint">Tap to unlock the memo</string>
    <string name="transaction_unlock_memo_dialog_message">Type your password to unlock:</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_quotation">Quotes</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_buy">Buy</string>
    <string name="title_sell">Sell</string>
    <string name="title_my_orders">Orders</string>
    <string name="label_latest">Latest:</string>
    <string name="label_high">High:</string>
    <string name="label_low">Low:</string>
    <string name="label_volume">Vol:</string>
    <string name="label_hour_24">24h:</string>
    <string name="label_price">Price:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_total">Total:</string>
    <string name="label_fee">Fee:</string>
    <string name="label_balance">Balance:</string>
    <string name="label_lowest_ask">Lowest ask:</string>
    <string name="label_highest_bid">Highest bid:</string>
    <string name="label_reset">RESET</string>
    <string name="label_buy">BUY</string>
    <string name="label_sell">SELL</string>
    <string name="label_buy_order">BUY ORDER</string>
    <string name="label_sell_order">SELL ORDER</string>
    <string name="label_operation">Operation:</string>
    <string name="label_expiration">Expiration:</string>
    <string name="label_no_open_orders">You have no open orders now</string>
    <string name="label_cancel_order">CANCEL ORDER</string>
    <string name="label_please_confirm">Please confirm</string>
    <string name="label_type_password">Type your password to exchange</string>
    <string name="label_ok">OK</string>
    <string name="label_no">NO</string>
    <string name="text_price">Price</string>
    <string name="label_confirm_cancel_order">Are you sure you want to cancel this order?</string>
    <string name="menu_logout">Log out</string>
    <string name="import_account_name">Account Name</string>
    <string name="import_password">Password</string>
    <string name="label_memo">Memo:</string>
    <string name="label_from">From:</string>
    <string name="label_to">To:</string>
    <string name="tab_send">Send</string>
    <string name="tab_receive">Receive</string>
    <string name="tab_balances">Balance</string>
    <string name="tab_transactions">Transactions</string>
    <string name="title_currency_settings">Currency Settings</string>
    <string name="title_full_node_api_server_select">Full Node Api Server Select</string>
    <string name="title_select_currency">Choose a currency</string>
    <string name="title_select_api_server">Choose a Full Node Api Server</string>
    <string name="label_file_path">File Path</string>
    <string name="label_select_file">Select File</string>
    <string name="label_private_key">Private Key</string>
    <string name="label_bts_cny">bitCNY/BTS</string>
    <string name="label_bts">BTS</string>
    <string name="label_cny">bitCNY</string>
    <string name="create_account_activity_title">Sign Up</string>
    <string name="create_account_password_confirm">Confirm password</string>
    <string name="create_account_activity_button">SIGN UP</string>
    <string name="create_account_activity_network_fail">Failed to connect to server</string>
    <string name="create_account_activity_account_object_exist">The account has already existed</string>
    <string name="create_account_activity_response_fail">Server failed to response</string>
    <string name="create_account_activity_create_fail">Failed to sign up</string>
    <string name="create_account_account_name_error_full_letter">The account name cannot contain only letters</string>
    <string name="create_account_account_name_too_short">The account name is too short</string>
    <string name="create_account_account_name_error_start_letter">The account name should start with a letter</string>
    <string name="create_account_account_name_error_dash_end">The account name can not end with a dash</string>
    <string name="create_account_check_box">I confirm I have backed up my password (password is the only certification, you will lose all property if you lose it)</string>
    <string name="create_account_password_requirement">The password should include more than 12 characters with at least 1 capital letter and 1 number</string>
    <string name="create_account_password_confirm_error">Two passwords do not match</string>
    <string name="create_account_account_name_empty">The account name is empty</string>
    <string name="create_account_password_empty">The password is empty</string>
    <string name="create_account_password_confirm_empty">The confirmation password is empty</string>
    <string name="create_account_check_box_confirm">You should confirm the content after the checkbox.</string>
    <string name="quotation_cureency_select_title">Quotation currency selection</string>
    <string name="quotation_cureency_select_dialog_title">Choose currency pair</string>
    <string name="trade_fragment_quantity">Quantity</string>
    <string name="label_change">Change:</string>
    <string name="promotion_dialog_title">New App BitUniverse</string>
    <string name="promotion_dialog_subtitle">Check BTS and Bitcoin price in BitShares DEX and other exchanges</string>
    <string name="promotion_dialog_positive_button">Download</string>
    <string name="loading_candle_data_failed">Failed to load data. Please try again later</string>
    <string name="loading_candle_data">Loading candle sticker chart</string>
    <string name="loading_history_failed">Failed to load data. Please try again later</string>
    <string name="loading_history_data">Loading transaction data</string>
    <string name="backup_wallet">Backup Wallet</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="welcome_back">Welcome back</string>
    <string name="pin_title">PIN code</string>
    <string name="change_pin_title">Change PIN</string>
    <string name="swith_pin_title">PIN lock</string>
    <string name="pin_confirm_new">Confirm new PIN</string>
    <string name="pin_enter_current">Enter current PIN</string>
    <string name="pin_enter_new">Enter new PIN</string>
    <string name="pin_edit_success">PIN changed</string>
    <string name="pin_save_success">PIN saved</string>
    <string name="pin_delete_success">PIN deleted</string>
    <string name="fee_first">Fee calculation is not completed</string>
    <string name="server_name">Server name</string>
    <string name="server_address">Server address</string>
    <string name="add_server">Add server</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="checking">Checking...</string>
    <string name="error">Error</string>
    <string name="restart_now">Restart now</string>
    <string name="app_will_restart">App will restart to apply changes</string>
    <string name="servers">Servers</string>
    <string name="cant_delete">Can not delete selected server!</string>
    <string name="cant_delete_last">Can not delete last server!</string>
    <string name="amount">Amount</string>
    <string name="token">Token</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="copy_account">Copy Account</string>
    <string name="wallet_pass">Wallet password</string>
    <string name="save">Save</string>
    <string name="no_req_token">You do not have the requested token!</string>
    <string name="pass_no_match">Passwords do not match!</string>
    <string name="send_btn">Send</string>
    <string name="select_token">Select token</string>
    <string name="hide_assets">Hide assets</string>
    <string name="color_title">Color</string>
    <string name="select_lang">Select language</string>
    <string name="lang">Language</string>
    <string name="deposit">Deposit</string>
    <string name="transfer_your_funds_to">Transfer your funds to:</string>
    <string name="with_memo">with MEMO:</string>
    <string name="min_amount">Min amount:</string>
</resources>