<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="pin_settings"
        android:title="@string/pin_title"
        android:defaultValue="null" />

    <ListPreference
        android:key="currency_setting"
        android:title="@string/title_currency_settings"
        android:dialogTitle="@string/title_select_currency"
        android:entries="@array/bts_currency_unit_options"
        android:entryValues="@array/bts_currency_unit_values"
        android:defaultValue="USD"/>

    <Preference
        android:key="full_node_api_server"
        android:title="@string/title_full_node_api_server_select"
        android:defaultValue="autoselect"/>

    <Preference
        android:key="pairs"
        android:title="@string/quotation_cureency_select_title"/>

    <Preference
        android:key="hide"
        android:title="@string/hide_assets"
        android:defaultValue="null" />

    <ListPreference
        android:key="locale"
        android:title="@string/lang"
        android:dialogTitle="@string/select_lang"
        android:entries="@array/language_options"
        android:entryValues="@array/language_values"
        android:defaultValue="null"/>

    <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
        android:defaultValue="@color/colorPrimary"
        android:key="color"
        android:title="@string/color_title"
        app:colorShape="circle"
        app:showDialog="false" />


</PreferenceScreen>