<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@mipmap/setting"
            android:title="@string/settings_activity_title" />

        <item
            android:id="@+id/deposit"
            android:icon="@drawable/ic_coin"
            android:title="@string/deposit" />

        <item
            android:id="@+id/keys"
            android:icon="@drawable/ic_key_change"
            android:title="Show keys" />

        <item
            android:id="@+id/about"
            android:icon="@mipmap/about"
            android:title="@string/about_activity_title" />
        <item
            android:id="@+id/logout"
            android:icon="@mipmap/quit"
            android:title="@string/menu_logout" />
    </group>

</menu>