<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bitshares.bitshareswallet.ImportActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/import_activity_title"
            app:titleTextColor="@android:color/white"/>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/accountNameIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/accountNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/import_account_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/layoutFileBin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fileSelectIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextFilePath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="textMultiLine"
                        android:hint="@string/label_file_path"
                        android:lines="2"
                        android:minLines="2" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/buttonSelectFile"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/button_small_background"
                    android:gravity="center"
                    android:text="@string/label_select_file"
                    android:textColor="@android:color/white" />
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/import_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/layoutPrivateKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_private_key"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextPrivateKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:minLines="2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBrainKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:text="Brain Key:"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextBrainKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:minLines="2" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewErrorInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/buttonImport"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/model_select_activity_title" />


        </LinearLayout>

    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>