<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/toTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/transfer_your_funds_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/copyTo"
        app:layout_constraintStart_toStartOf="@+id/toTitle"
        app:layout_constraintTop_toBottomOf="@+id/toTitle" />

    <TextView
        android:id="@+id/memoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/with_memo"
        app:layout_constraintStart_toStartOf="@+id/toTitle"
        app:layout_constraintTop_toBottomOf="@+id/toContent" />

    <TextView
        android:id="@+id/memoContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/copyMemo"
        app:layout_constraintStart_toStartOf="@+id/toTitle"
        app:layout_constraintTop_toBottomOf="@+id/memoTitle" />

    <TextView
        android:id="@+id/minTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/min_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memoContent" />

    <TextView
        android:id="@+id/minContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/minTitle"
        app:layout_constraintTop_toTopOf="@+id/minTitle" />

    <ImageView
        android:id="@+id/copyTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/toContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toContent"
        app:srcCompat="@drawable/ic_copy" />

    <ImageView
        android:id="@+id/copyMemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/memoContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/memoContent"
        app:srcCompat="@drawable/ic_copy" />
</android.support.constraint.ConstraintLayout>